Added a bit of logic to switch accounts fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,26 +57,27 @@
 
     <string name="buy_tokens_header">Please key in the cash amount or number of units you want to buy</string>
     <string name="cash">Cash</string>
-    <string name="units">Units</string>
+    <string name="units">Units (Kwh)</string>
     <string name="or">OR</string>
     <string name="suggest_units">Suggested number of units:</string>
     <string name="view_hist">View history</string>
     <string name="purchase">Purchase</string>
-    <string name="token_num">Token number</string>
+    <string name="token_num">Token number:</string>
     <string name="more_details">More details</string>
     <string name="less_details">Less details</string>
-    <string name="date">Date</string>
+    <string name="date">Date:</string>
     <string name="kwh">(Kwh)</string>
-    <string name="amnt">Amount Ksh</string>
-    <string name="token_amnt">Token amount Ksh</string>
-    <string name="tax">Tax Ksh</string>
-    <string name="rep">REP Ksh</string>
-    <string name="warma">WARMA Ksh</string>
-    <string name="erc">ERC Ksh</string>
-    <string name="fuel_index">Fuel index Ksh</string>
-    <string name="forex">Forex Ksh</string>
-    <string name="inflation">Inflation adjustment Ksh</string>
+    <string name="amnt">Amount Ksh:</string>
+    <string name="token_amnt">Token amount Ksh:</string>
+    <string name="tax">Tax Ksh:</string>
+    <string name="rep">REP Ksh:</string>
+    <string name="warma">WARMA Ksh:</string>
+    <string name="erc">ERC Ksh:</string>
+    <string name="fuel_index">Fuel index Ksh:</string>
+    <string name="forex">Forex Ksh:</string>
+    <string name="inflation">Inflation adjustment Ksh:</string>
     <string name="success">Success</string>
+    <string name="formatted_mtr_no">Meter number:</string>
 
     <string name="switch_acc">Switch accounts</string>
     <string name="current">(current)</string>
