Finished inbox UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,6 @@
 
     <string name="reply_prompt">Talk to us&#8230;</string>
 
+    <string name="inbox_prompt">"Send us a message about anything, and we'll get back to you"</string>
+
 </resources>
